<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Artists</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_location_label">Location</string>


    <string name="pref_location_key" translatable="false">jsonURL</string>


    <string name="pref_location_default" translatable="false">http://cache-default05e.cdn.yandex.net/download.cdn.yandex.net/mobilization-2016/artists.json</string>


    <string name="tracks1">track</string>
    <string name="tracks2">tracks</string>
    <string name="tracks">tracks</string>
    <string name="albums1">album</string>
    <string name="albums2">albums</string>
    <string name="albums">albums</string>
    <string name="genres">genres</string>
    <string name="name">name</string>
    <string name="biographi">Biographi</string>
    <string name="description">Description</string>
    <string name="comma">,\u00A0</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">netjorika.com</string>
    <string name="content_authority">com.netjorika.android.artistlist.app</string>
    <string name="me">me</string>
    <string name="about">About</string>
    <string name="bla_bla_bla">bla bla bla</string>
    <string name="send_email">Send email</string>
    <string name="my_email">georg2510@gmail.com</string>
    <string name="email_text">You are cool!</string>
    <string name="Ebail_subject">To Developer</string>
    <string name="email_subject">To developer</string>
    <string name="Panel_Text">Музыка и Радио</string>
</resources>
