<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="com.netjorika.android.artistlist.app.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_cover_BIG"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/detail_ganres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/genres" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/detail_albums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comma" />

                <TextView
                    android:id="@+id/detail_tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_biographi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/biographi"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/description" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
