<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="@dimen/abc_text_size_title_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/list_item_comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/list_item_tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracks"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>